Feito responsivo css tablet para leetrading e corrigido API para subir no EC2
