# .net/api/index.js
@@ -5,6 +5,14 @@ const bodyParser = require('body-parser');
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('./swagger/swagger_output.json');
 
+//new code added 11/10/2022
+var fs = require('fs');
+var https = require('node:https');
+var privateKey = fs.readFileSync('./sslcert/api.lobios.io.key', 'utf8');
+var certificate = fs.readFileSync('./sslcert/api.lobios.io.crt', 'utf8');
+
+var credentials = { key: privateKey, cert: certificate };
+
 const menuRoutes = require('./routes/menu');
 const translationRoutes = require('./routes/dictionary');
 const emailRoutes = require('./routes/email');
@@ -13,7 +21,7 @@ const exchangeRoutes = require('./routes/exchange');
 const app = express();
 
 app.use(cors((req, callback) => {
-    var allowedOrigin = false;
+    var allowedOrigin = true;
     if (config.http.cors.allowedOrigins.indexOf("*") > -1) {
         allowedOrigin = true;
     } else {
@@ -34,6 +42,15 @@ app.use("/", translationRoutes);
 app.use("/", emailRoutes);
 app.use("/", exchangeRoutes);
 
+
+var httpsServer = https.createServer(credentials, app);
+
+httpsServer.listen(config.http.port, () => {
+    console.log(config.trace.displayMessage.replace("{port}", config.http.port));
+});
+
+/*
 app.listen(config.http.port, config.http.host, () => {
     console.log(config.trace.displayMessage.replace("{port}", config.http.port));
 });
+*/
